# bastionx

./: .gitignore  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  MANIFESTO.md  README.md  SECURITY.md  run.bat  vcpkg.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml
docs/: BUILD.md  CRYPTO_SPEC.md  THREAT_MODEL.md  phase5.md
include/bastionx/crypto/: CryptoService.h  SecureMemory.h
include/bastionx/storage/: NotesRepository.h
include/bastionx/ui/: ActivityBar.h  ClipboardGuard.h  FindBar.h  FormattingToolbar.h  MainWindow.h  ModeSelectorBar.h  NoteEditor.h  NotesList.h  NotesPanel.h  SearchPanel.h  SettingsDialog.h  Sidebar.h  StatusBar.h  TabBar.h  TagsWidget.h  UIConstants.h  UnlockScreen.h
include/bastionx/vault/: VaultService.h  VaultSettings.h
scripts/: package.bat
src/: main.cpp
src/crypto/: CryptoService.cpp  SecureMemory.cpp
src/storage/: NotesRepository.cpp
src/ui/: ActivityBar.cpp  ClipboardGuard.cpp  FindBar.cpp  FormattingToolbar.cpp  MainWindow.cpp  ModeSelectorBar.cpp  NoteEditor.cpp  NotesList.cpp  NotesPanel.cpp  SearchPanel.cpp  SettingsDialog.cpp  Sidebar.cpp  StatusBar.cpp  StyleSheet.h  StyleSheet.h.backup  TabBar.cpp  TagsWidget.cpp  UnlockScreen.cpp
src/vault/: VaultService.cpp  VaultSettings.cpp
tests/: CMakeLists.txt  test_main.cpp
tests/crypto/: CryptoServiceTest.cpp  SecureMemoryTest.cpp  test_vectors.h
tests/integration/: IntegrationTest.cpp
tests/storage/: NotesRepositoryTest.cpp  SearchTest.cpp
tests/ui/: MarkdownRoundTripTest.cpp  ui_test_main.cpp
tests/vault/: PasswordChangeTest.cpp  SQLCipherTest.cpp  VaultServiceTest.cpp  VaultSettingsTest.cpp
